<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013-2017 microG Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_manage_google"
        android:summary="@string/manage_google_account_summary"
        android:title="@string/manage_google_account">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://myaccount.google.com" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_manage_youtube"
        android:summary="@string/manage_yt_activities_summary"
        android:title="@string/manage_yt_activities">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://myactivity.google.com/product/youtube" />
    </Preference>
    <SwitchPreference
        android:layout_height="wrap_content"
        android:defaultValue="true"
        android:icon="@drawable/ic_google_permissions"
        android:key="auth_manager_trust_google"
        android:summary="@string/pref_auth_trust_google_summary"
        android:title="@string/pref_auth_trust_google_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_find_account"
        android:key="auth_manager_visible"
        android:summary="@string/pref_auth_visible_summary"
        android:title="@string/pref_auth_visible_title" />
</PreferenceScreen>